--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -733,3 +733,19 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
   publisher = {Springer},
   note =         {To appear},
 }
+
+@InProceedings{MossakowskiEtAl14b,
+  author = {Till Mossakowski and Mihai Codescu and Oilver Kutz, C. Lange, and M. Gruninger},
+  title = {Proof Support for Common Logic},
+  year = {2014},
+  booktitle = {Proc. of the Workshop on Automated Reasoning for Quantified Non-Classical Logic (ARQNL), July 23, Vienna Summer of Logic,, 2014},
+  keywords = {Common Logic proof Hets translation},
+  pdfurl = {http://www.informatik.uni-bremen.de/~okutz/resources/Proof-Support-for-Common-Logic.pdf},
+  abstract = {We present the theoretical background for an extension of the Heterogeneous Tool Set HETS
+that enables proof
+support for Common Logic. This is achieved via logic translations that relate Common Logic and some of its sublogics
+to already supported logics and automated theorem proving systems. We thus provide the first theorem proving support
+for Common Logic covering the full language, including the possibility of verifying meta-theoretical relationships
+between Common Logic theories.},
+  status = {Reviewed}
+}
