fixed LaTeX errors

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5115,7 +5115,7 @@ the naturality diagram
 $$
 \xymatrix{
  \Mod^J(\Phi(\Sigma_2)) \ar[r]^{\beta_{\Sigma_2}}  \ar[d]^{\Mod^J(\Phi(\sigma))}&\Mod^I(\Sigma_2) \ar[d]^{\Mod^I(\sigma)}\\ 
- \Mod^J(\Phi(\Sigma_1)) \ar[r]_{\beta_\Sigma_1} & \Mod^I(\Sigma_1)
+ \Mod^J(\Phi(\Sigma_1)) \ar[r]_{\beta_{\Sigma_1}} & \Mod^I(\Sigma_1)
 }
 $$
 admits (weak) amalgamation, i.e.\
@@ -6415,7 +6415,7 @@ The semantics is only defined if $\beta_{\Sig(L_1)}(M_2\forget\sigma) \in \Mod(L
 If the optional argument $\syntax{Conservative}$ is \syntax{model-conservative}, for
 each model  $M_1\in\Mod(L_1)$ there must exist a model $M_2\in\Mod(L_2)$ such that
 $\beta_{\Sig(L_1)}(M_2\forget\sigma) = M_1$. If the optional argument $\syntax{Conservative}$ is \syntax{consequence-conservative}, 
-for each $\Sig(L_1)$-sentence $\varphi$, if $\cM_2\models \simga(\alpha_{\Sig(L_1)}(\varphi))$ then
+for each $\Sig(L_1)$-sentence $\varphi$, if $\cM_2\models \sigma(\alpha_{\Sig(L_1)}(\varphi))$ then
 $\cM_1\models \varphi$.\ednote{not-model-conservative and not-consequence-conservative are missing}
 
 $$sem(\Gamma, \syntax{refinement, IntprName, Refinement}) = \Gamma'$$
@@ -6551,7 +6551,7 @@ where $\Gamma.\current=(lang, logic,ser)$ and $logic'$ is the target logic of $(
 $lang$ need to be changed, too. Maybe we should always require a language
 translation, so that we can use its target? Plus the default serialization
 (the existence of which needs to be added to the definition of
-heterogeneous logical env)?}}
+heterogeneous logical env)?}
 
 
 
@@ -8321,7 +8321,7 @@ Translation of signatures is detailed in section~\ref{a:UML-CD-models},
 translation of sentences in section~\ref{a:UML-CD-sat}.
 Models are translated identically.
 
-\sclause{$FOL \to \CASL}
+\sclause{$FOL \to \CASL$}
 This is an obvious sublogic.
  
 \infannex{Extended Logic Graph}\label{a:ext-graph}
