--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1165,7 +1165,8 @@ and interoperability of
 ontologies, specifications and models (OMS for short). DOL is a language for
 distributed knowledge representation, system specification and 
 model-driven development across multiple OMS, particularly OMS
- that have been formalized in different OMS languages. This \IS responds to the
+ that have been formalized in different OMS languages.\ednote{Suggestion from Terry: ``DOL is a tool for managing and manipulating distributed knowledge representations, system specifications, and model-driven design/development artifacts among multiple OMS, particularly...''. However, I think DOL is not a tool, but a language. Hence, this does not fit. TM} 
+This \IS responds to the
 OntoIOp Request for Proposals \cite{RFP}.
 
 
@@ -1707,6 +1708,9 @@ plus non-logical annotations\index{annotation}.}
     This is opposed to logical symbols in OWL, e.g.\ those for intersection
     and union of classes.
   \end{example}
+
+\smallskip
+
   \begin{example}
     Non-logical symbols in Common Logic \nisref{ISO/IEC 24707:2007} comprise
     \begin{itemize}
@@ -1923,7 +1927,7 @@ not considered sentences of that OMS.
 %    The particular strength of literate programming is that one can generate both a reference manual and compilable/executable code (here: a formal OMS) from the same source, which facilitates maintenance.
 %  \end{note}
 
-  \termdefinition{OMS documentation}{set of all annotations\index{annotation} to an \termref{OMS}, plus any other documents and explanatory comments generated during the entire OMS building process.}
+  \termdefinition{OMS documentation}{set of all annotations\index{annotation} to an \termref{OMS}, plus any other documents and explanatory comments generated during or after development or deployment of the OMS.}
   \begin{note}
     Adapted from \cite{SuarezFigueroaEtAl:OntologyGlossary2008}.
   \end{note}
@@ -9339,7 +9343,7 @@ organization into repositories has several advantages:
  let it be thematically or organizational. Access rights can be given
  to users or teams of users per repository. Typically, read access is
  given to everyone, and write access only to a restricted set of users
- and teams. However, also completely open world-writeable repositories
+ and teams. However, also completely open, i.e.\ world-writeable repositories
  are possible, as well as private repositories visible only to a
  restricted set of users and teams.  Since creation of repositories is
  done easily with a few clicks, this supports a policy of many but
