--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5980,9 +5980,6 @@ $O=$ \syntax{combination, Network} is
   $G$ to this new node labeled with the morphisms $\mu_i$ for each $i\in |G|$.
 \end{itemize}
 
-%Application
-\semdom{sem^T(\syntax{'application', Substname, OMS})= TODO}
-\semdom{sem^M(\syntax{'application', Substname, OMS})= TODO}\ednote{TODO}
 
 %%%%%%%%%%%%%%%%%%%%%%%
 
@@ -6259,10 +6256,6 @@ and
 $sem(\Gamma, \Sigma_1,\Sigma_2, \syntax{Symbol}) = (s,s)$ 
 where $sem(\Gamma,\Sigma_1, \syntax{Symbol}) = s$.
 
-\semdom{sem(\Gamma,\Sigma,\syntax{Term}) = t}
-
-$$sem(\Gamma, \Sigma, \syntax{Term}) = t$$
-\noindent where $t$ is a $\Sigma$-term and the analysis is done in a logic-specific way.\ednote{This should be added to the heterogeneous logical env. We here need derived siganture morphisms.}
 
 \semdom{sem(\Gamma, \Sigma, \syntax{Sentence}) = \varphi}
 
@@ -6759,15 +6752,35 @@ $C_1,\ldots, C_n$ taking into account \syntax{AlignSem}.
 
 \ssclause{Semantics of Queries}
 
- \semdom{sem(QueryRelatedDefn)}
+While queries are very important from a practical point of view, their
+semantics so far has been developed only for individual institutions.
+In \cite{MossakowskiEtAl15a}, three options for an
+institution-independent semantics of queries and derived signature
+morphisms (which can map symbols to terms) are discussed. Currently,
+it is not clear which one would be the best choice. It is expected
+that after some experience with DOL, a choice will crystallize. This
+means that in the current version, the semantics of queries is
+elided, and left for a later version of DOL.
+
+ \semdom{sem(\syntax{QueryRelatedDefn})}
 
 %%%%%%%%%%%%%%%%%%%%%
- \semdom{sem(QueryDefn)}
+ \semdom{sem(\syntax{QueryDefn})}
 %%%%%%%%%%%%%%%%%%%%
- \semdom{sem(SubstDefn)}
+ \semdom{sem(\syntax{SubstDefn})}
 %%%%%%%%%%%%%%%%%%%%%
- \semdom{sem(ResultDefn)}
+ \semdom{sem(\syntax{ResultDefn})}
 %%%%%%%%%%%%%%%%%%%%%%%
+
+%Application
+\semdom{sem^T(\syntax{'application', Substname, OMS})}
+\semdom{sem^M(\syntax{'application', Substname, OMS})}
+
+
+\semdom{sem(\Gamma,\Sigma,\syntax{Term}) = t}
+
+%$$sem(\Gamma, \Sigma, \syntax{Term}) = t$$
+%\noindent where $t$ is a $\Sigma$-term and the analysis is done in a logic-specific way.\ednote{This should be added to the heterogeneous logical env. We here need derived siganture morphisms.}
 
 %\sclause{Translational semantics of DOL language constructs}
 %
