--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -749,3 +749,16 @@ for Common Logic covering the full language, including the possibility of verify
 between Common Logic theories.},
   status = {Reviewed}
 }
+
+
+@InProceedings{MossakowskiEtAl15a,
+  author = 	 {Till Mossakowski and Ulf Krumnack and Tom Maibaum},
+  title = 	 {What is a derived signature morphism?},
+  booktitle =    {WADT 2014},
+  year = 	 {2015},
+  editor = 	 {R. Diaconescu and M. Codescu and I. Tutu},
+  series = 	 {Lecture Notes in Computer Science},
+  publisher =    {Springer},
+  note = 	 {To appear},
+}
+
